--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://16.170.224.55:9000//</sonar.host.url>
+		<sonar.host.url>http://16.170.239.50:9000///</sonar.host.url>
 		<sonar.login>a92623609308a1e6bd9440060aaeb4430630ea30</sonar.login>
 		<sonar.password>passw0rd</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
